--- a/src/components/summary/summary.scss
+++ b/src/components/summary/summary.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     background: linear-gradient(180deg, var(--rm-shell-section) 0%, var(--rm-shell-run-panel) 88%);
+    color: var(--rm-shell-panel-text);
     width: 100%;
 
     @include desktop-screen {
@@ -44,6 +45,7 @@
         &-title {
             height: 18px;
             margin-bottom: 4px;
+            color: var(--rm-shell-panel-text);
 
             @include typeface(--small-center-bold-black, none);
         }
@@ -51,12 +53,15 @@
         &-content {
             height: 18px;
             margin-bottom: 4px;
+            color: var(--rm-shell-panel-text);
 
             @include typeface(--small-center-normal-black, none);
         }
     }
 
     &__amount {
+        color: var(--rm-shell-panel-text);
+
         @include typeface(--small-center-normal-black, none);
 
         &--positive {
